<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reminder_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"

    tools:context="cs185.cs.ucsb.edu.jingyanreminder.ReminderDetailFragment">


    <TextView
        android:id="@+id/reminder_detail_text"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"

        android:textIsSelectable="true"
       />


    <RelativeLayout
        android:id="@+id/reminder_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="title"
            style="@style/BoldText"

            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_Mon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mon" />

            <CheckBox
                android:id="@+id/checkbox_Tue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tue" />

            <CheckBox
                android:id="@+id/checkbox_Wed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wed" />

            <CheckBox
                android:id="@+id/checkbox_Tru"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thru" />

            <CheckBox
                android:id="@+id/checkbox_Fri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fri" />

            <CheckBox
                android:id="@+id/checkbox_Sat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sat" />

            <CheckBox
                android:id="@+id/checkbox_Sun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sun" />

        </LinearLayout>


        <TextView
            android:id="@+id/item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:text="time"
            style="@style/MediumText"/>


        <ScrollView
            android:id="@+id/scroll_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/item_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="250dp"
            android:text="detail"
            android:textAlignment="center"
            style="@style/MediumText"/>

        </ScrollView>


        <Button
            android:id="@+id/item_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/lightGray"
            android:text="@string/buttonEdit"/>

        <Button
            android:id="@+id/item_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/lightGray"
            android:text="@string/buttonDelete"/>

    </RelativeLayout>


</RelativeLayout>


